--- a/media queries/delete-media.css
+++ b/media queries/delete-media.css
@@ -6,7 +6,7 @@
 
 @media screen and (max-width:390px) {
     html{
-        font-size: 7px;
+        font-size: 6px;
     }
 
     button{
