--- a/media queries/profile-media.css
+++ b/media queries/profile-media.css
@@ -17,7 +17,7 @@
         font-size: 4rem;
     }
     .account-details{
-        font-size: 8px;
+        font-size: 7px;
     }
     .grid-col-3{
         grid-template-columns: 1fr;
