--- a/media queries/transfer-media.css
+++ b/media queries/transfer-media.css
@@ -1,4 +1,7 @@
 @media screen and (max-width: 500px) {
+    html{
+        font-size: 8px;
+    }
     .main-container{
         max-width: 100vw;
     }
